fixed seller page to align with navbar properly

--- a/src/abccommerce.client/src/App.css
+++ b/src/abccommerce.client/src/App.css
@@ -1,6 +1,7 @@
 ﻿#root {
     width: 100vw;
     height: 100vh;
+        overflow: hidden;
 }
 
 th, td {
